--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
     sdk: flutter
   provider: ^6.1.2  
   image_picker: 
+  path_provider: ^2.1.3
+  path: ^1.8.3
+
 
 
   # The following adds the Cupertino Icons font to your application.
