--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,9 @@
     <application
         android:label="my_local"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher">  
+    <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyCh6rdAjecEoJ_taHVO7DWV-gJBgpE6MuU"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
